[package]
name = "dithering"
version = "0.1.17"
edition = "2021"
authors = ["Patrik Larsson <patrik@backyardml.se>"]
homepage = "https://backyardml.github.io/"
repository = "https://github.com/BackyardML/dithering"
description = """
Provides implementations of various image dithering methods,
with a focus on performances.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dithering"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.19.0"
pyo3 = "0.19.0"
